@@ -1,3 +1,4 @@
+* Add a multi selection widget for many2many
 * Remove auto-refresh
 * Add support of domain for non-relation field
 * Allow drag & drop on the attachment button
